--- a/2/index.html
+++ b/2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>yourname</title>
+    <title>Abdirahman Hassan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -21,9 +21,9 @@
     <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <table>
             <tr>
-                <td id="logo">yourname.</td>
+                <td id="logo">Ah.</td>
                 <td id="navigation">
-                    <a href="#work">work</a>
+                    <a href="#work">Projects</a>
                     <a href="#bio">about</a>
                     <a href="">blog</a>
                     <a href="#contact">contact</a>
@@ -32,9 +32,10 @@
         </table>
     </header>
     <table id="top_part">
+
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
-                <h1>this is where you put your about or tagline</h1>
+                <h1>Abdirahman Hassan</h1>
                 <button class="btn_one">Hire Me</button><br>
                 <table>
                     <tr>
@@ -46,19 +47,38 @@
                     </tr>
                 </table>
             </td>
-            <td id="rightImage" class="animated jackInTheBox" style="animation-delay:2.2s;"></td>
         </tr>
     </table>
     <div id="work">
-        <h1>work</h1>
-        <div id="photos">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1547922657-b370d1687eb1?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1549375463-8cbc18ca3f24?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1549366021-9f761d450615?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=650&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1549309019-a1d77aeae74f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1547149666-769b42053e67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=564&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1547950515-e652d0f50b1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80">
-            <img onclick="magnify($(this).attr('src'))" src="https://images.unsplash.com/photo-1545342084-d03fe58ea023?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=633&q=80">
+        <h1>Projects</h1>
+        <div class="Projects">
+            <div id="projectdiv">
+                <img src="C:\Users\abdi\OneDrive\Pictures\indeedportfolio.png" class="imagee"/>
+                <h3>Indeed Clone</h3>
+                <p id="projectpara">a Multi-page full-stack Indeed clone where job seekers and employers can apply/post jobs, search, review, and accept/reject applicants.</p>
+                <div class="buttondiv">
+                    <button class="btn_one">Source</button>
+                    <button class="btn_one">Live</button>
+                </div>
+            </div>
+            <div id="projectdiv">
+                <img src="C:\Users\abdi\OneDrive\Pictures\indeedportfolio.png" class="imagee"/>
+                <h3>Indeed Clone</h3>
+                <p id="projectpara">a Multi-page full-stack Indeed clone where job seekers and employers can apply/post jobs, search, review, and accept/reject applicants.</p>
+                <div class="buttondiv">
+                    <button class="btn_one">Source</button>
+                    <button class="btn_one">Live</button>
+                </div>
+            </div>
+            <div id="projectdiv">
+                <img src="C:\Users\abdi\OneDrive\Pictures\indeedportfolio.png" class="imagee"/>
+                <h3>Indeed Clone</h3>
+                <p id="projectpara">a Multi-page full-stack Indeed clone where job seekers and employers can apply/post jobs, search, review, and accept/reject applicants.</p>
+                <div class="buttondiv">
+                    <button class="btn_one">Source</button>
+                    <button class="btn_one">Live</button>
+                </div>
+            </div>
         </div>
     </div>
     <div id="bio">
@@ -118,9 +138,7 @@
                 </tr>
             </table>
     </div>
-    <div id="footer">
-        made on earth by a human <br> <a href="https://imfunniee.github.io">imfunniee</a>
-    </div>
+
     <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
