--- a/2/index.html
+++ b/2/index.html
@@ -21,7 +21,7 @@
     <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <table>
             <tr>
-                <td id="logo">Ah.</td>
+                <td id="logo">AH.</td>
                 <td id="navigation">
                     <a href="#work">Projects</a>
                     <a href="#bio">about</a>
@@ -129,7 +129,7 @@
                     </td>
                     <td>
                         <form>
-                            <input type="text" placeholder="name" required>
+                            <input type="text" placeholder="name" required color="white">
                             <input type="email" placeholder="email" required><br>
                             <textarea placeholder="your message" required rows="5"></textarea><br>
                             <button class="btn_one">send</button>
