Added twitter summariser projec

--- a/2/index.html
+++ b/2/index.html
@@ -62,7 +62,7 @@
      I am a motivated web developer with a strong passion for crafting dynamic, interactive and user-friendly applications.
         </p>
         <p>
-I have experience with HTML5/CSS3, JavaScript (ES6), React JS, Java, Version control, Rest API, Redux JS, Firebase and Material UI 
+I have experience with HTML5/CSS3, JavaScript (ES6), React.JS, Node.js, Express.js, MongoDB, Java, Version control
         </p>
     </div>
 
@@ -89,12 +89,26 @@ I have experience with HTML5/CSS3, JavaScript (ES6), React JS, Java, Version con
                 <p id="projectpara">A free online multiplayer game where players can create leagues, draft players,
                     set lineups, and track scores</p>
                 <p id="projectpara">React,Typescript, Redux, Node js, Express js, MongoDB</p>
-                <p id="projectpara" style="color: rgb(255, 44, 90);">Please note that server may take a while to load</p>
+                <p id="projectpara" style="color: rgb(255, 44, 90);">Please note that the server may take a while to load</p>
                 <div class="buttondiv">
                     <a href="https://github.com/abdirahmanhassann/FantasyFootball" target="_blank">
                         <button class="btn_one">Source</button>
                     </a>
                     <a href="https://fantasyfootball-abdirahmanhassann.vercel.app/" target="_blank">
+                        <button class="btn_one">Live</button>
+                    </a>
+                  </div>
+            </div>
+            <div id="projectdiv">
+                <img src="tweetsummariser.png" class="imagee"/>
+                <h3>Twitter user summariser</h3>
+                <p id="projectpara">A web app that allows users to view a summary of a twitter account based on previous tweets</p>
+                <p id="projectpara">React,Typescript, ChatGPT API, Twitter API</p>
+                <div class="buttondiv">
+                    <a href="https://github.com/abdirahmanhassann/TwitterUserSummariser" target="_blank">
+                        <button class="btn_one">Source</button>
+                    </a>
+                    <a href="https://tweetscraperfrontend-abdirahmanhassann.vercel.app/" target="_blank">
                         <button class="btn_one">Live</button>
                     </a>
                   </div>
